2010-04-26  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* afm2tfm.c: (write16()): cast argument to short to avoid warning.

2010-04-25  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* writet1.c (edecrypt()): cast argument to byte to avoid warning.
	* dvips.c: Use IS_DIR_SEP for the test of a directory separator.

2010-04-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (EXTRA_DIST): Add afm2tfm-test.pl.

2010-04-11  Karl Berry  <karl@tug.org>

	* afm2tfm.c (staticligkern): restore spaces around semicolons,
	accidentally removed in source cleanup.
	
        * afm2tfm.c (throughout): use snprintf where needed.

	* afm2tfm-test.pl: New test script for afm2tfm.

	* Makefile.am (TESTS): Add the new test.

2010-03-29  Karl Berry  <karl@tug.org>

	* loadfont.c,
	* tfmload.c,
	* virtualfont.c: concatn terminates with NULL.  From Akira.

2010-03-28  Karl Berry  <karl@tug.org>

	* all files: no spaces before semicolons.

	* loadfont.c,
	* tfmload.c,
	* virtualfont.c,
	* bbox.c,
	* writet1.c,
	* dvips.c,
	* header.c: dynamically concatenate more error strings.
	* protos.h (errbuf): increase.

2010-03-26  Karl Berry  <karl@tug.org>

	* virtualfont.c (badvf, virtualfont): use concat[n] instead of
		sprintf for error messages.
	(<kpathsea/concatn.h>): #include.

	* virtualfont.c (vfopen): do not sprintf too long of a name.
	CVE-2010-0827, found by Dan Rosenberg.

	* dospecial.c (predospecial): avoid seg fault from integer overflow.
	CVE-2010-0739, found by Marc Schoenefeld, patch prepared
	by Jindrich Novy.

2010-02-26  Karl Berry  <karl@tug.org>

	* search.c (selfautoloc_prog, quote_name): remove kpse_ prefix for
	the time being, since it seems web2c's safeness stuff can't be
	easily factored into using them.

2010-02-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* search.c: #include <kpathsea/variable.h> for kpse_var_value.

2010-02-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (EXTRA_DIST): Add the new files.

2010-02-19  Karl Berry  <karl@tug.org>
